syntax = "proto3";

package eidos.chain.v1;

option go_package = "github.com/eidos-exchange/eidos/proto/chain/v1;chainv1";

import "common/enums.proto";
import "common/pagination.proto";

// 链上服务 (结算+索引)
service ChainService {
    // === 结算相关 ===
    rpc GetSettlementBatch(GetSettlementBatchRequest) returns (GetSettlementBatchResponse);
    rpc ListSettlementBatches(ListSettlementBatchesRequest) returns (ListSettlementBatchesResponse);
    rpc RetrySettlement(RetrySettlementRequest) returns (RetrySettlementResponse);
    rpc RollbackSettlement(RollbackSettlementRequest) returns (RollbackSettlementResponse);

    // === 提现相关 ===
    rpc GetWithdrawalTx(GetWithdrawalTxRequest) returns (GetWithdrawalTxResponse);
    rpc ListWithdrawalTxs(ListWithdrawalTxsRequest) returns (ListWithdrawalTxsResponse);

    // === 链上状态 ===
    rpc GetChainStatus(GetChainStatusRequest) returns (GetChainStatusResponse);

    // === 对账 ===
    rpc GetReconciliationReport(GetReconciliationReportRequest) returns (GetReconciliationReportResponse);
}

// === 结算批次 ===
message GetSettlementBatchRequest {
    string batch_id = 1;
}

message GetSettlementBatchResponse {
    SettlementBatch batch = 1;
}

message ListSettlementBatchesRequest {
    eidos.common.v1.SettlementStatus status = 1;
    eidos.common.v1.PaginationRequest pagination = 2;
}

message ListSettlementBatchesResponse {
    repeated SettlementBatch batches = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message SettlementBatch {
    string batch_id = 1;
    repeated string trade_ids = 2;
    eidos.common.v1.SettlementStatus status = 3;
    string tx_hash = 4;
    int64 block_number = 5;
    int32 retry_count = 6;
    string last_error = 7;
    int64 created_at = 8;
    int64 submitted_at = 9;
    int64 confirmed_at = 10;
}

message RetrySettlementRequest {
    string batch_id = 1;
}

message RetrySettlementResponse {
    bool success = 1;
    string error_message = 2;
}

message RollbackSettlementRequest {
    string batch_id = 1;
    string reason = 2;
    string approver_id = 3;
}

message RollbackSettlementResponse {
    bool success = 1;
    string error_message = 2;
}

// === 提现交易 ===
message GetWithdrawalTxRequest {
    string withdraw_id = 1;
}

message GetWithdrawalTxResponse {
    WithdrawalTx tx = 1;
}

message ListWithdrawalTxsRequest {
    eidos.common.v1.WithdrawStatus status = 1;
    eidos.common.v1.PaginationRequest pagination = 2;
}

message ListWithdrawalTxsResponse {
    repeated WithdrawalTx txs = 1;
    eidos.common.v1.PaginationResponse pagination = 2;
}

message WithdrawalTx {
    string withdraw_id = 1;
    string wallet = 2;
    string token = 3;
    string amount = 4;
    string to_address = 5;
    string tx_hash = 6;
    eidos.common.v1.WithdrawStatus status = 7;
    int32 retry_count = 8;
    string last_error = 9;
    int64 created_at = 10;
    int64 submitted_at = 11;
    int64 confirmed_at = 12;
}

// === 链上状态 ===
message GetChainStatusRequest {}

message GetChainStatusResponse {
    int64 current_block = 1;
    int64 indexed_block = 2;
    int64 lag_blocks = 3;
    bool is_syncing = 4;
    string rpc_endpoint = 5;
    int64 last_check_time = 6;
}

// === 对账 ===
message GetReconciliationReportRequest {
    int64 start_time = 1;
    int64 end_time = 2;
}

message GetReconciliationReportResponse {
    int64 report_time = 1;
    repeated TokenReconciliation tokens = 2;
    repeated Discrepancy discrepancies = 3;
}

message TokenReconciliation {
    string token = 1;
    string onchain_total = 2;
    string offchain_total = 3;
    string difference = 4;
    bool is_matched = 5;
}

message Discrepancy {
    string token = 1;
    string wallet = 2;
    string onchain_balance = 3;
    string offchain_balance = 4;
    string difference = 5;
    string reason = 6;
}

// === Kafka 消息 ===

// 结算消息 (Kafka: settlements)
message SettlementMessage {
    string batch_id = 1;
    repeated SettlementTrade trades = 2;
    int64 created_at = 3;
}

message SettlementTrade {
    string trade_id = 1;
    string maker_wallet = 2;
    string taker_wallet = 3;
    string base_token = 4;
    string quote_token = 5;
    string base_amount = 6;
    string quote_amount = 7;
}

// 结算确认消息 (Kafka: settlement-confirmed)
message SettlementConfirmedMessage {
    string batch_id = 1;
    string tx_hash = 2;
    int64 block_number = 3;
    repeated string trade_ids = 4;
    int64 confirmed_at = 5;
}

// 充值事件消息 (Kafka: deposits)
message DepositMessage {
    string tx_hash = 1;
    uint32 log_index = 2;
    string wallet = 3;
    string token = 4;
    string amount = 5;
    int64 block_number = 6;
    int64 detected_at = 7;
}
